--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Abdul Kalam</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <title>Abdul Kalam</title>
 </head>
 
 <body>
@@ -39,20 +39,18 @@
     </nav>
 
     <!-- Section Home -->
-    <section class="container-fluid bg-success py-3">
-        <div class=" px-5 pt-5 text-center">
-            <div class="d-sm-flex text-light align-items-center justify-content-evenly">
-                <div class="blockquote">
-                    <h2>APJ Abdul Kalam</h2>
-                    <div>
-                        <hr>
-                    </div>
-                    <p>Missile Man of India</p>
-                    <p>Indian Aerospace Scientist, Writer and 11th President of India </p>
-                </div>
+    <section class="container-fluid bg-success">
+        <div class="d-sm-flex align-items-center justify-content-evenly mt-5 py-5 px-5">
+            <div class="blockquote text-center text-light">
+                <h2>APJ Abdul Kalam</h2>
                 <div>
-                    <img class="img-fluid p-5" style="width: 420px;" src="img/Abdul Kalam.jpg" alt="">
+                    <hr>
                 </div>
+                <p>Missile Man of India</p>
+                <p>Indian Aerospace Scientist, Writer and 11th President of India </p>
+            </div>
+            <div>
+                <img class="img-fluid p-5" style="width: 420px;" src="img/Abdul Kalam.jpg">
             </div>
         </div>
     </section>
@@ -70,30 +68,32 @@
     </section>
 
     <!-- Section About -->
-    <section class="mt-4 p-5 bg-white text-dark" id="about">
-        <div class="container p5">
+    <section class="bg-white text-dark" id="about">
+        <div class="container my-5">
             <div class="d-md-flex g-3 align-items-center text-center text-md-start">
-                <h2 class="px-5">About</h2>
+                <div>
+                    <h2 class="py-3 px-md-5">About</h2>
+                </div>
                 <div class="d-none d-md-block vr"></div>
-                <div class="blockquote text--center text-sm- px-5">
+                <div class="blockquote text-center text-md-start px-md-5">
                     <p>Avul Pakir Jainulabdeen Abdul Kalam was born on 15 October
                         1931, who was born and raised in Rameswaram, Tamil Nadu</p>
                     <p>He studied physics and aerospace engineering in Madras Institute of Technology in 1960</p>
                     <p>He spent the four decades as a scientist and science administrator, mainly at the Defence
                         Research and Development Organisation (DRDO) and Indian Space Research Organisation (ISRO)</p>
                     <p>Missile Man of India for his work on the development of ballistic missile.</p>
-                    <p>He served as the 11th president of India from 2002 to 2007 </p>
+                    <p>He served as the 11th president of India from 2002 to 2007.</p>
                 </div>
             </div>
     </section>
 
     <!-- Science Day -->
-    <section class="bg-dark p-4 pb-0">
+    <section class="bg-dark p-sm-4 py-4">
         <div class="container">
             <div class=" text-warning text-center">
-                <p class="h4 font-weight-bold"> In 26th May 2005, Switzerland has declared May 26 as the Science Day in
-                    Honour of
-                    President APJ Abdul Kalam visit.</p><br>
+                <h4> In 26th May 2005, Switzerland has declared May 26 as the Science Day in
+                    Honour of President APJ Abdul Kalam visit.
+                </h4>
             </div>
         </div>
     </section>
@@ -235,24 +235,26 @@
                 <div class="mt-4">
                     <h5>About the Author</h5>
                     <hr class="mb-3 mt-0 d-inline-block mx-auto" style="width: 110px;">
-                    <p>Made by<span class="text-muted"> <b> Joshua Ashvinth Roys</b></span> as a part of <br> Full Stack
+                    <p>Made by<span class="text-muted"> <b> Joshua Ashvinth Roys</b></span> as a part of <br> Full
+                        Stack
                         Developer Bootcamp Course</p>
                 </div>
                 <!-- Flex Element 2-->
-                <div class="d-none d-sm-block vr"></div>
+                <div class="d-none d-md-block vr"></div>
                 <div class="mt-4">
                     <h5>Techs Used</h5>
                     <hr class="mb-3 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p class="text-muted"><b>HTML<br>CSS<br>Bootstrap</b></p>
                 </div>
                 <!-- Flex Element 3-->
-                <div class="d-none d-sm-block vr"></div>
+                <div class="d-none d-md-block vr"></div>
                 <div class="mt-4">
                     <h5>Content Disclaimer</h5>
                     <hr class="mb-3 mt-0 d-inline-block mx-auto" style="width: 100px;">
                     <p>The content of this website is copied from <a
                             href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam">Wikipedia</a> & <a
-                            href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam"> Britannica</a>.<br>Original
+                            href="https://www.britannica.com/biography/A-P-J-Abdul-Kalam">
+                            Britannica</a>.<br>Original
                         credits goes to the respective authors.</p>
                 </div>
             </div>
