line hight add using inline CSS

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
     <section class="bg-dark p-sm-4 py-4">
         <div class="container">
             <div class=" text-warning text-center">
-                <h4> In 26th May 2005, Switzerland has declared May 26 as the Science Day in
-                    Honour of President APJ Abdul Kalam visit.
+                <h4 style="line-height: 35px;">
+                    In 26th May 2005, Switzerland has declared May 26 as the Science Day in Honour of President APJ
+                    Abdul Kalam visit.
                 </h4>
             </div>
         </div>
